--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ num_cpus = "1.0"
 itertools = "0.7"
 hashbrown = "0.3"
 bfgs = "0.1"
-ndarray = "0.14"
+ndarray = "0.11"
+rand = "0.6"
 
 [lib]
 path = "src/lib.rs"
