--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ target
 !sampled_trnas.fa
 !rfam_seed_stas_v14.4.sth
 !costs.dat
+!conshomfold_running_time_3d_plot.dat
+!contrafold_running_time_3d_plot.dat
+!raf_running_time_3d_plot.dat
