--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ license = "MIT"
 
 [dependencies]
 rna-algos = "0.1"
-lazy_static = "0.1"
+# rna-algos = {path = "../rna-algos"}
+# bio-seq-algos = {path = "../bio-seq-algos"}
+# lazy_static = "0.1"
 time = "0.1"
 scoped_threadpool = "0.1"
 getopts = "0.2"
