--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ keywords = ["bioinformatics", "rna", "structural-alignment"]
 license = "MIT"
 
 [dependencies]
-rna-algos = "0.1"
-# rna-algos = {path = "../rna-algos"}
+# rna-algos = "0.1"
+rna-algos = {path = "../rna-algos"}
 # bio-seq-algos = {path = "../bio-seq-algos"}
 # lazy_static = "0.1"
 time = "0.1"
