--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "consprob"
+name = "consprob-trained"
 version = "0.1.0"
 authors = ["heartsh <heartsh@heartsh.io>"]
 description = "ConsProb, which Estimates Average Posterior Probabilities on Sparse Global Pairwise RNA Structural Alignment"
@@ -9,10 +9,7 @@ keywords = ["bioinformatics", "rna", "structural-alignment"]
 license = "MIT"
 
 [dependencies]
-# rna-algos = "0.1"
-rna-algos = {path = "../rna-algos"}
-# bio-seq-algos = {path = "../bio-seq-algos"}
-# lazy_static = "0.1"
+consprob = "0.1"
 time = "0.1"
 scoped_threadpool = "0.1"
 getopts = "0.2"
@@ -27,4 +24,4 @@ rand = "0.8"
 
 [lib]
 path = "src/lib.rs"
-name = "consprob"
+name = "consprob_trained"
