Loosen parameter occurence count parser of training data

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ target
 !.gitignore
 !README.md
 !rfam_seed_stas_v14.4.sth
-!costs.dat
-!costs_random_init.dat
+!train_logs.dat
+!train_logs_random_init.dat
 !sampled_trnas.fa
